--- a/DH_BugTracker/Content/Custom.css
+++ b/DH_BugTracker/Content/Custom.css
@@ -3,7 +3,6 @@
     background-color: #00cae3;
     color: #fff;
 }
-
 .allbtn:hover {
     background-color:darkslateblue;
     color:aliceblue;
@@ -12,7 +11,7 @@
 .txtBoxs {
     background-color: white;
     border: solid 1px grey;
-    padding-left: 5px;
+    padding: 5px;
 }
 
 #avatarImg {
