--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -47,7 +47,7 @@
     </div>
     <div class="text-center">
         <span class="txt1">
-            Sign in as
+            Sign in as a
         </span>
 
         <a class="txt2 hov1">
