--- a/DH_BugTracker/Views/Admin/ManageProjects.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageProjects.cshtml
@@ -7,83 +7,79 @@
 <div class="container-fluid">
     @using (Html.BeginForm())
     {
+        @Html.AntiForgeryToken()
         <div class="row">
-            @Html.AntiForgeryToken()
-            <div class=" col-4">
+            <div class="col">
                 <div class="row">
                     <div class="col">
-                        <h3>Select Project/s</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
+                        @Html.Label("Select 1 or more Projects", new { style = "font-size:20px" })
                         @Html.ListBox("Projects", null, new { @class = "form-control txtBoxs" })
                     </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="row">
                     <div class="col">
-                        <br />
                         <br />
                         <br />
                         <button type="submit" class="btn allbtn btn-lg">Assign</button>
                     </div>
                 </div>
+                <br />
+                <hr />
+                <br />
+                @Html.Label("Select Users, then click Assign", new { style = "font-size:20px" })
+                <br />
+                <div class="row">
+                    <div class="col">
+                        @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin"))
+                        {
+                            <div class="row">
+                                <div class="col">
+                                    <h3>Admins</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    @Html.DropDownList("AdminId", null, " --Select One/None-- ", new { @class = "form-control txtBoxs" })
+                                </div>
+                            </div>
+                        }
+                        <div class="row">
+                            <div class="col">
+                                <h3>Developers</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                @Html.ListBox("Developers", null, new { @class = "form-control txtBoxs" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin"))
+                        {
+                            <div class="row">
+                                <div class="col">
+                                    <h3>Project Managers</h3>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    @Html.DropDownList("ProjectManagerId", null, " --Select One/None-- ", new { @class = "form-control txtBoxs" })
+                                </div>
+                            </div>
+                        }
+                        <div class="row">
+                            <div class="col">
+                                <h3>Submitters</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                @Html.ListBox("Submitters", null, new { @class = "form-control txtBoxs" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-5">
-                @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin"))
-                {
-                    <div class="row">
-                        <div class="col">
-                            <h3>Admins</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            @Html.DropDownList("AdminId", null, "--Select One--", new { @class = "form-control txtBoxs" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <h3>Project Managers</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            @Html.DropDownList("ProjectManagerId", null, "--Select One--", new { @class = "form-control txtBoxs" })
-                        </div>
-                    </div>
-                }
-
-                <div class="row">
-                    <div class="col">
-                        <h3>Developers</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        @Html.ListBox("Developers", null, new { @class = "form-control txtBoxs" })
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col">
-                        <h3>Submitters</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        @Html.ListBox("Submitters", null, new { @class = "form-control txtBoxs" })
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
-    <hr />
-    <div class="row">
-        <div class="col">
-            <div class="col-md-12">
+            <div class="col">
                 <div class="card">
                     <div class="card-header card-header-primary">
                         <h4 class="card-title ">Project Assignments</h4>
@@ -98,7 +94,7 @@
                                             @Html.DisplayName("Projects Assigned")
                                         </th>
                                         <th>
-                                        @Html.DisplayNameFor(model => model.Name)
+                                            @Html.DisplayNameFor(model => model.Name)
                                         </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.Email)
@@ -125,7 +121,8 @@
                                                 @Html.DisplayFor(modelitem => item.Email)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelitem => item.Role)
+                                                @{ var roleDisplay = (item.Role != null ? item.Role : "N/A"); }
+                                                @roleDisplay
                                             </td>
                                         </tr>
                                     }
@@ -135,13 +132,19 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
-    </div>
+    }
 </div>
 
 @section scripts{
+    @if (User.IsInRole("Admin") || User.IsInRole("Demo_Admin"))
+    {
+        <script>
+            $(document).ready(function () {
+                $("#AdminId, #ProjectManagerId").select2({ minimumResultsForSearch: Infinity });
+            });
+        </script>
+    }
     <script>
         $('#DTJQ2').DataTable();
     </script>
