--- a/DH_BugTracker/Views/Project/ManageUsers.cshtml
+++ b/DH_BugTracker/Views/Project/ManageUsers.cshtml
@@ -23,12 +23,12 @@
                         {
                             <div class="col-5">
                                 @Html.Label("Administrators")
-                                @Html.DropDownList("AdminId", null, "--Select One--", new { @class = "form-control txtBoxs" })
+                                @Html.DropDownList("AdminId", null, " --Select One/None-- ", new { @class = "form-control txtBoxs" })
                             </div>
                         }
                         <div class="col-5 offset-1">
                             @Html.Label("Project Managers")
-                            @Html.DropDownList("ProjectManagerId", null, "--Select One--", new { @class = "form-control txtBoxs" })
+                            @Html.DropDownList("ProjectManagerId", null, " --Select One/None-- ", new { @class = "form-control txtBoxs" })
                         </div>
                     </div>
                     <br />
@@ -106,6 +106,11 @@
 
 @section scripts{
     <script>
+        $(document).ready(function () {
+            $("#AdminId, #ProjectManagerId").select2({ minimumResultsForSearch: Infinity });
+        });
+    </script>
+    <script>
         $('#DTJQ5').dataTable();
-    </script>    
+    </script>
 }
