--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
     <link href="~/Content/jquery.dataTables.min.css" rel="stylesheet" />
     <!-- My Custom -->
     <link href="~/Content/Custom.css" rel="stylesheet" />
+    <!-- Morris Chart -->
+    <link href="~/Content/morris.css" rel="stylesheet" />
+    <!-- Select2 -->
+    <link href="~/Content/LoginCustoms/select2.min.css" rel="stylesheet" />
 
     @Scripts.Render("~/bundles/modernizr")
 
@@ -118,7 +122,6 @@
                             Logged in as: <b>@(urRole != null ? urRole : "Not Assigned")</b>
                         </span>
                     </div>
-
                     <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="navbar-toggler-icon icon-bar"></span>
@@ -136,7 +139,6 @@
                             </div>
                         </form>
                         <ul class="navbar-nav">
-
                             <li class="nav-item">
                                 <a class="nav-link" href="~/Home/Dashboard">
                                     <i class="material-icons">dashboard</i>
@@ -145,7 +147,6 @@
                                     </p>
                                 </a>
                             </li>
-
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#pablo" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Notifications
@@ -179,7 +180,6 @@
                                     }
                                 </div>
                             </li>
-
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     User Actions
@@ -214,15 +214,13 @@
     </div>
 
 
-
     <!--   Core JS Files   -->
-    <script src="~/Scripts/popper.min.js"></script>
     @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/popper.min.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/bootstrap-material-design.min.js"></script>
     <script src="~/Scripts/perfect-scrollbar.jquery.min.js"></script>
-    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
-    <script src="~/Scripts/jquery.dataTables.min.js"></script>
     <!-- Plugin for the momentJs  -->
     <script src="~/Scripts/moment.min.js"></script>
     <!--  Plugin for Sweet Alert -->
@@ -235,6 +233,8 @@
     <script src="~/Scripts/bootstrap-selectpicker.js"></script>
     <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
     <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
+    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
+    <script src="~/Scripts/jquery.dataTables.min.js"></script>
     <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
     <script src="~/Scripts/bootstrap-tagsinput.js"></script>
     <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
@@ -250,13 +250,15 @@
     <!-- Library for adding dinamically elements -->
     <script src="~/Scripts/arrive.min.js"></script>
     <!--  Google Maps Plugin    -->
-    @*<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>*@
+        @*<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>*@
     <!-- Chartist JS -->
     <script src="~/Scripts/chartist.min.js"></script>
     <!--  Notifications Plugin    -->
     <script src="~/Scripts/bootstrap-notify.js"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="~/Scripts/material-dashboard.min.js"></script>
+    <!-- Select2 -->
+    <script src="~/Scripts/LoginCustoms/select2.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -436,10 +438,6 @@
         });
     </script>
 
-
-
     @RenderSection("scripts", required: false)
 </body>
-
 </html>
-
