--- a/DH_BugTracker/Views/Ticket/Edit.cshtml
+++ b/DH_BugTracker/Views/Ticket/Edit.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-7">
         <div class="card">
             <div class="card-header card-header-primary">
-                <h4 class="card-title">Edit Ticket</h4>
+                <h4 class="card-title">@ViewBag.Title Ticket</h4>
                 <p class="card-category">Change Ticket properties</p>
             </div>
             <div class="card-body">
@@ -24,14 +24,14 @@
                         <div class="col-md-5">
                             @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-12" })
                             <div class="col-md-12">
-                                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } } )
+                                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-7">
                             @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-12" })
                             <div class="col-md-12">
-                                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", style = "Max-width:90%" } } )
+                                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", style = "Max-width:90%" } })
                                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                                   User.IsInRole("Project Manager") || User.IsInRole("Demo_Project Manager")))
                             {
                                 <div class="col-md-12">
-                                    @Html.DropDownList("AssignedToUserId", null, "-- Select Developer --", htmlAttributes: new { @class = "form-control txtBoxs" })
+                                    @Html.DropDownList("AssignedToUserId", null, " --Select Developer/None-- ", htmlAttributes: new { @class = "form-control txtBoxs" })
                                     @Html.ValidationMessageFor(model => model.AssignedToUserId, "", new { @class = "text-danger" })
                                 </div>
                             }
@@ -91,12 +91,12 @@
                             </div>
                         </div>
                         @*<div class="col-md-5">
-                            @Html.Label("Ticket Owner", htmlAttributes: new { @class = "control-label col-md-12" })
-                            <div class="col-md-12">
-                                @Html.DropDownList("OwnerUserId", null, htmlAttributes: new { @class = "form-control txtBoxs" })
-                                @Html.ValidationMessageFor(model => model.OwnerUserId, "", new { @class = "text-danger" })
-                            </div>
-                        </div>*@
+                                @Html.Label("Ticket Owner", htmlAttributes: new { @class = "control-label col-md-12" })
+                                <div class="col-md-12">
+                                    @Html.DropDownList("OwnerUserId", null, htmlAttributes: new { @class = "form-control txtBoxs" })
+                                    @Html.ValidationMessageFor(model => model.OwnerUserId, "", new { @class = "text-danger" })
+                                </div>
+                            </div>*@
                     </div>
                     <hr />
                     <div class="row">
@@ -111,3 +111,20 @@
         </div>
     </div>
 </div>
+
+@section scripts{
+    @if ((User.IsInRole("Admin") || User.IsInRole("Demo_Admin") ||
+          User.IsInRole("Project Manager") || User.IsInRole("Demo_Project Manager")))
+    {
+        <script>
+            $(document).ready(function () {
+                $("#AssignedToUserId").select2({ minimumResultsForSearch: Infinity });
+            });
+        </script>
+    }
+    <script>
+        $(document).ready(function () {
+            $("#ProjectId, #TicketPriorityId, #TicketStatusId, #TicketTypeId").select2({ minimumResultsForSearch: Infinity });
+        });
+    </script>
+}
