--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -157,7 +157,7 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    @foreach (var unreadNotification in NotificationHelper.GetUnreadNotifications())
+                                    @foreach (var unreadNotification in NotificationHelper.GetUnreadNotifications().OrderByDescending(tn => tn.Created))
                                     {
                                         using (Html.BeginForm("Dismiss", "TicketNotify", FormMethod.Post))
                                         {
@@ -224,7 +224,7 @@
     <!-- Plugin for the momentJs  -->
     <script src="~/Scripts/moment.min.js"></script>
     <!--  Plugin for Sweet Alert -->
-    <script src="~/Scripts/sweetalert2.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <!-- Forms Validations Plugin -->
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
@@ -250,7 +250,7 @@
     <!-- Library for adding dinamically elements -->
     <script src="~/Scripts/arrive.min.js"></script>
     <!--  Google Maps Plugin    -->
-        @*<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>*@
+    @*<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>*@
     <!-- Chartist JS -->
     <script src="~/Scripts/chartist.min.js"></script>
     <!--  Notifications Plugin    -->
