--- a/DH_BugTracker/Views/Ticket/Edit.cshtml
+++ b/DH_BugTracker/Views/Ticket/Edit.cshtml
@@ -57,7 +57,7 @@
                             }
                             else
                             {
-                                <div class="col-md-12" style="padding:10px 0 0 20px">
+                                <div class="col-md-12" style="padding:0 0 0 20px">
                                     <b style="font-size:16px">@ViewBag.DevId</b>
                                     @Html.HiddenFor(model => model.AssignedToUserId)
                                 </div>
