--- a/DH_BugTracker/Views/Manage/Index.cshtml
+++ b/DH_BugTracker/Views/Manage/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">Manage Account Settings</h4>
                 <p class="card-category text-success" style="padding-left:10px">@ViewBag.StatusMessage</p>
             </div>
