--- a/DH_BugTracker/Views/Project/Details.cshtml
+++ b/DH_BugTracker/Views/Project/Details.cshtml
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="row">
                 <div class="col">
-                    <div class="card-header card-header-primary">
+                    <div class="card-header card-header-warning">
                         <h4 class="card-title">@ViewBag.Title for Project #@Model.Id</h4>
                         <p class="card-category" style="padding-left:10px">
                             <u>@Html.ActionLink("Back to List", "Index")</u> | 
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-5">
                     <div class="card">
-                        <div class="card-header card-header-primary">
+                        <div class="card-header card-header-warning">
                             <h4 class="card-title">Assigned Personnel</h4>
                             <p class="card-category" style="padding-left:10px">
                                 Current Users on this Project.
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-7" style="border-left:1px solid #D0D0D0">
                     <div class="card">
-                        <div class="card-header card-header-primary">
+                        <div class="card-header card-header-warning">
                             <h4 class="card-title">Tickets for this Project</h4>
                             <p class="card-category" style="padding-left:10px">
                                 Condensed Ticket Details
