--- a/DH_BugTracker/Views/Ticket/Details.cshtml
+++ b/DH_BugTracker/Views/Ticket/Details.cshtml
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="col">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title for Ticket #@Model.Id</h4>
                 <p class="card-category" style="padding-left:10px">
                     <u> @Html.ActionLink("Back to List", "Index")</u> |
@@ -99,7 +99,7 @@
             </div>
         }
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title ">Ticket Comments</h4>
                 <p class="card-category" style="padding-left:10px">All comments for this Ticket.</p>
             </div>
@@ -145,7 +145,7 @@
 <div class="row">
     <div class="col">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title ">Ticket History</h4>
                 <p class="card-category" style="padding-left:10px">All History Information for this Ticket.</p>
             </div>
@@ -226,7 +226,7 @@
             </div>
         }
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title ">Ticket Attachments</h4>
                 <p class="card-category" style="padding-left:10px">All files attached to this Ticket.</p>
             </div>
