--- a/DH_BugTracker/Views/Admin/ManageProjects.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageProjects.cshtml
@@ -80,7 +80,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <div class="card-header card-header-primary">
+                    <div class="card-header card-header-warning">
                         <h4 class="card-title ">Project Assignments</h4>
                         <p class="card-category" style="padding-left:10px">All Users you have assigned to Projects.</p>
                     </div>
