--- a/DH_BugTracker/Views/Home/Dashboard.cshtml
+++ b/DH_BugTracker/Views/Home/Dashboard.cshtml
@@ -3,13 +3,13 @@
 }
 <style>
     .morris-chart text {
-        fill: white;
+        fill: black;
     }
 </style>
 <div class="row">
     <div class="col-5 offset-1">
         <div class="card">
-            <div class="card-header card-chart card-header-warning">
+            <div class="card-header card-chart" style="background-color:#ccc">
                 <div class="ct-chart morris-chart" id="demoChart1" style="height:330px;padding-bottom:33px"></div>
             </div>
             <div class="card-body">
@@ -19,7 +19,7 @@
     </div>
     <div class="col-5">
         <div class="card">
-            <div class="card-header card-chart card-header-info">
+            <div class="card-header card-char" style="background-color:#ccc">
                 <div class="ct-chart" id="demoChart2" style="height:330px"></div>
             </div>
             <div class="card-body">
@@ -31,7 +31,7 @@
 <div class="row">
     <div class="col-5 offset-1">
         <div class="card">
-            <div class="card-header card-chart card-header-success">
+            <div class="card-header card-chart" style="background-color:#ccc">
                 <div class="ct-chart morris-chart" id="demoChart3" style="height:330px;padding-bottom:33px"></div>
             </div>
             <div class="card-body">
@@ -41,7 +41,7 @@
     </div>
     <div class="col-5">
         <div class="card">
-            <div class="card-header card-chart card-header-rose">
+            <div class="card-header card-chart" style="background-color:#ccc">
                 <div class="ct-chart" id="demoChart4" style="height:330px"></div>
             </div>
             <div class="card-body">
