--- a/DH_BugTracker/Views/Project/Create.cshtml
+++ b/DH_BugTracker/Views/Project/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-5">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title Project</h4>
                 <p class="card-category" style="padding-left:10px">
                     Project Manager will be added to the Project automatically.
