--- a/DH_BugTracker/Views/Project/Edit.cshtml
+++ b/DH_BugTracker/Views/Project/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-5">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title #@Model.Id</h4>
                 <p class="card-category">Change Project properties</p>
             </div>
