--- a/DH_BugTracker/Views/Project/Index.cshtml
+++ b/DH_BugTracker/Views/Project/Index.cshtml
@@ -15,7 +15,7 @@
 </p>
 <div class="col-md-12">
     <div class="card">
-        <div class="card-header card-header-primary">
+        <div class="card-header card-header-warning">
             <h4 class="card-title ">Your Projects</h4>
             <p class="card-category" style="padding-left:10px">All the Projects you have @access</p>
         </div>
