--- a/DH_BugTracker/Views/Project/ManageUsers.cshtml
+++ b/DH_BugTracker/Views/Project/ManageUsers.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-6">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title for: @ViewBag.ProjectName</h4>
                 <p class="card-category" style="padding-left:10px">
                     Assign Users to this Project.
@@ -59,7 +59,7 @@
     <div class="col-6" style="border-left:1px solid #D0D0D0">
         <br />
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">Selected Personnel</h4>
                 <p class="card-category" style="padding-left:10px">
                     Current Users on this Project.
