--- a/DH_BugTracker/Views/Ticket/Create.cshtml
+++ b/DH_BugTracker/Views/Ticket/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title Ticket</h4>
                 <p class="card-category" style="padding-left:10px">
                     Submit a bug, comment, or request.
