--- a/DH_BugTracker/Views/Ticket/Edit.cshtml
+++ b/DH_BugTracker/Views/Ticket/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-7">
         <div class="card">
-            <div class="card-header card-header-primary">
+            <div class="card-header card-header-warning">
                 <h4 class="card-title">@ViewBag.Title Ticket</h4>
                 <p class="card-category">Change Ticket properties</p>
             </div>
